Bug 126530 - Tabbed UI: insufficient active tab contrast, tabs too small, underline mnemonics, insufficient padding, button spacing & alignment
Summary: Tabbed UI: insufficient active tab contrast, tabs too small, underline mnemon...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.5.2 release
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: HiDPI Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2019-07-24 18:24 UTC by Damian Hofmann
Modified: 2025-10-06 11:43 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Tabbed Notebar on Windows 10 HiDPI (82.57 KB, image/png)
2019-07-24 18:25 UTC, Damian Hofmann
Details
Squised Tabbed UI View (145.69 KB, image/png)
2022-06-01 00:13 UTC, Ema S.
Details
Screenshot with kf5 and master as of 24aed2348395b234c6c35a504809ea6f5e97f5a1 for discussion in https://gerrit.libreoffice.org/c/core/+/191626 (91.54 KB, image/png)
2025-09-29 15:49 UTC, Michael Weghorn
Details
Screenshot with kf5 and https://gerrit.libreoffice.org/c/core/+/191626 for discussion in that Gerrit change (89.81 KB, image/png)
2025-09-29 15:50 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Damian Hofmann 2019-07-24 18:24:30 UTC
Description:
The tabbed Notebook Bar has a host of display/usability issues on Windows 10:

1. Tabs are too small in height
2. Underlined Mnemonics add visual noise
3. Padding between text and border of tabs is too small
4. Not enough contrast between colors for currently active and inactive tabs
5. Buttons are poorly aligned, have no space between and are missing borders

Overall, the Notebook Bar looks cramped and noisy. Lack of contrast makes it difficult to see, which tab is currently active. These layout problems impact usability.

Tested on Windows 10 1809 with LO 6.2.5
Screen resolution: 4K (3840 x 2160) with 250% text scaling

Steps to Reproduce:
1.View > User Interface > Tabbed

Actual Results:
cramped and noisy UI

Expected Results:
clean UI


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Damian Hofmann 2019-07-24 18:25:18 UTC
Created attachment 152970 [details]
Tabbed Notebar on Windows 10 HiDPI
Comment 2 Lobotomik 2019-10-21 09:09:43 UTC
Also in Spanish, in a HiDPI touchscreen, in OpenOffice 6.3.2.2 and every version of 6.2.x i have tested.

The tab labels run together. This is not helped by the low contrast of the lines that separate the tabs.
Comment 3 Heiko Tietze 2019-10-22 07:12:54 UTC
Yes, it looks ugly without padding. What can we do, Sumit, Szymon?
Comment 4 andreas_k 2019-10-22 07:25:15 UTC
(In reply to Damian Hofmann from comment #0)
> 1. Tabs are too small in height
> 2. Underlined Mnemonics add visual noise
> 3. Padding between text and border of tabs is too small
> 4. Not enough contrast between colors for currently active and inactive tabs
> 5. Buttons are poorly aligned, have no space between and are missing borders

In general ALL Notebookbars didn't use specific padding items, cause the reason is that I don't want to have .ui file specific settings. So if you can change the settings somewhere in the generic themes it will improve the NB but also ALL other ui elements.

If I would add paddings to each element in the .ui file it may work better, but I prefer that this can be solved somewhere generic.

5. I would love if someone can tell me what I have to do that the select thing will fill height.
Comment 5 Heiko Tietze 2022-01-31 15:43:31 UTC
Sorry for the late reply, sometimes reports just slip through. Since some time has past by and the report consists of five different issues I'm going to resolve it as WFM with the hope some/many/all issues have been fixed meanwhile. If not, other reports are referenced with the meta ticket. Feel free to reopen, of course.
Comment 6 Ema S. 2022-06-01 00:13:56 UTC
Created attachment 180510 [details]
Squised Tabbed UI View
Comment 7 Ema S. 2022-06-01 00:15:55 UTC
(In reply to Heiko Tietze from comment #5)
> Sorry for the late reply, sometimes reports just slip through. Since some
> time has past by and the report consists of five different issues I'm going
> to resolve it as WFM with the hope some/many/all issues have been fixed
> meanwhile. If not, other reports are referenced with the meta ticket. Feel
> free to reopen, of course.

Hey there, I currently still have all the listed issues on my 4k PC, I've attached a screenshot.
Comment 8 Heiko Tietze 2022-06-01 08:18:59 UTC
So let's keep it open as bug. We aim for a ticket per patch so the Continuos integration can be linked to the reported issue. Does not work wit multiple reports in one ticket. And the summary "usability issues" is nondescript too. It will be hard to find volunteers.
Comment 9 Ema S. 2022-06-01 22:38:58 UTC
(In reply to Heiko Tietze from comment #8)
> So let's keep it open as bug. We aim for a ticket per patch so the Continuos
> integration can be linked to the reported issue. Does not work wit multiple
> reports in one ticket. And the summary "usability issues" is nondescript
> too. It will be hard to find volunteers.

Sorry, this is my second day here and I'm not familiar with the process.  Should I open my own separate bug or update the title for this one?  Thanks for responding so fast!
Comment 10 Heiko Tietze 2022-06-02 05:50:11 UTC
(In reply to Ema S. from comment #9)
> (In reply to Heiko Tietze from comment #8)
> > So let's keep it open as bug. We aim for a ticket per patch so the Continuos
> > integration can be linked to the reported issue. Does not work wit multiple
> > reports in one ticket. And the summary "usability issues" is nondescript
> > too. It will be hard to find volunteers.
> 
> Sorry, this is my second day here and I'm not familiar with the process. 
> Should I open my own separate bug or update the title for this one?  Thanks
> for responding so fast!

Your change to get something fixed is much higher in case of bite-sized and clearly framed issues. From quickly glancing over #0 I understand 1. and 3., 4. is somewhat difficult since we use the system theme, or should do so, 2. with "visual noise" and 5. with "poorly aligned" needs specification. It does not mean implementing a couple of patches for this broad topic is impossible. And some issues might have also been reported. I remember discussions on a11y, the tab size, and white space.
Comment 11 Damian Hofmann 2022-06-15 20:03:59 UTC
> 2. with "visual noise"

The underlining of the MNEMONIC key makes the already cluttered UI even busier. It should normally be hidden and only shown, when the ALT key is pressed.

> 5. with "poorly aligned" needs specification.

What specification do you need? There's a clear example pointed out in the screenshot (see nr. 5), where the "Seitenleiste" button simply doesn't line up with it's neighboring buttons "Lineale" und "Gitter". This is one of many examples, where the buttons or groups have "strange" horizontal or vertical offsets to their neighbors for no apparent reason.

> does not mean implementing a couple of patches for this broad topic is
> impossible. And some issues might have also been reported. I remember
> discussions on a11y, the tab size, and white space.

Feel free to split into separate issues, if it helps fixing. But it's really not one individual thing for me. The poor use of margins, padding, bad alignments, etc. make the entire Tabbed Notebook Bar look unfinished and messy. It's the combination of all those things.
Comment 12 QA Administrators 2024-06-15 03:17:46 UTC Comment hidden (obsolete)
Comment 13 Commit Notification 2025-09-29 13:05:18 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24aed2348395b234c6c35a504809ea6f5e97f5a1

Resolves tdf#126530 - Improve contrast between active and inactive tabs

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Heiko Tietze 2025-09-29 13:07:19 UTC
This patch fixes the contrast issues with tabs making the active tab visually merge with the Notebookbar pane. It applies to all dialogs with tabs.

The other issues should have been fixed meanwhile, resolving the ticket as fixed.
(It was tagged as Windows but is also an issue for Qt. Follow-up patch incoming...)
Comment 15 Michael Weghorn 2025-09-29 15:49:54 UTC
Created attachment 203039 [details]
Screenshot with kf5 and master as of 24aed2348395b234c6c35a504809ea6f5e97f5a1 for discussion in https://gerrit.libreoffice.org/c/core/+/191626
Comment 16 Michael Weghorn 2025-09-29 15:50:23 UTC
Created attachment 203040 [details]
Screenshot with kf5 and https://gerrit.libreoffice.org/c/core/+/191626 for discussion in that Gerrit change
Comment 17 Eyal Rozenberg 2025-09-29 19:40:20 UTC
Spelling out the issues in the title (which is otherwise completely generic and vague).

Also, nicely done Heiko, this really hits the spot!

I hope that this fix didn't only happen just now because of our chat in the last design meeting... :-P