Resolves tdf#126530 - Improve contrast between active and inactive tabs

Change-Id: I38abce43bb04e85c1540d8bceb97578730d994b7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191617
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins